--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.46", features = ["derive"] }
+maud = "0.27.0"
+rand = "0.9.2"
 serde = {version = "1.0.219", features=["derive"]}
 tiny_http = "0.12.0"
 toml = "0.9.5"
